--- a/assets/css/frontPageStyle.css
+++ b/assets/css/frontPageStyle.css
@@ -10,6 +10,11 @@
   transform: translate(-50%, -50%);
 }
 
+video{
+  width: 100%;
+  height: 100%;
+}
+
 .content {
   position: fixed;
   bottom: 0;
@@ -36,7 +41,7 @@
     position: fixed;
     text-align: center;
     top: 20%;
-    color: rgb(153, 226, 226);
+    color: black;
 }
 #ss {
     color: white;
