--- a/assets/css/frontPageStyle.css
+++ b/assets/css/frontPageStyle.css
@@ -10,10 +10,6 @@
   transform: translate(-50%, -50%);
 }
 
-video{
-  width: 100%;
-  height: 100%;
-}
 
 .content {
   position: fixed;
@@ -41,7 +37,7 @@ video{
     position: fixed;
     text-align: center;
     top: 20%;
-    color: black;
+    color: white;
 }
 #ss {
     color: white;
