--- a/assets/css/frontPageStyle.css
+++ b/assets/css/frontPageStyle.css
@@ -23,6 +23,7 @@
 #rs {
   font-family: 'Quicksand', sans-serif;
   font-size: 75px;;
+  color: #bae8e8;
 }
 
 #rost {
@@ -40,7 +41,7 @@
     color: white;
 }
 #ss {
-    color: white;
+    color: #ffffff;
 }
 body {
   padding: 0;
@@ -107,4 +108,18 @@ form:hover input{
 form:hover .fa{
   background: #2C698D;
   color: white;
+}
+
+.bg-image {
+  background-image: url(../videos/pexels-photo-1903702.jpeg);
+  background-size: 100%;
+  filter: grayscale(50%) blur(4px) brightness(50%);
+ 
+  
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
