--- a/assets/css/frontPageStyle.css
+++ b/assets/css/frontPageStyle.css
@@ -109,3 +109,17 @@ form:hover .fa{
   background: #2C698D;
   color: white;
 }
+
+.bg-image {
+  background-image: url(../videos/pexels-photo-1903702.jpeg);
+  background-size: 100%;
+  filter: grayscale(50%) blur(4px) brightness(50%);
+ 
+  
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
